k8s-manifests/iaas-board/deployment.yaml
apiVersion: apps/v1beta1
kind: Deployment
metadata:
  name: iaas-board-deployment
  namespace: default
  labels:
    app: iaas-board
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: iaas-board
    spec:
      containers:
        - name: iaas-board
          image: registry.a12s.io/capkopper/iaas-dashboard:0.0.5
          args: ["python", "dashboard.py"]
          ports:
            - containerPort: 5000
      imagePullSecrets:
        - name: registry-secret
